--- a/P2A/Makefile
+++ b/P2A/Makefile
@@ -9,6 +9,7 @@ FLAGS = -Wall -Wextra
 
 default:
 	$(CC) $(FLAGS) -pthread lab2_add.c -o lab2_add
+	$(CC) $(FLAGS) -pthread lab2_list.c -o lab2_list
 
 tests:
 	chmod u+x generate_data.sh
