--- a/P2A/Makefile
+++ b/P2A/Makefile
@@ -7,10 +7,20 @@
 CC = gcc
 FLAGS = -Wall -Wextra
 
-default:
+build:
 	$(CC) $(FLAGS) -pthread lab2_add.c -o lab2_add
 	$(CC) $(FLAGS) -pthread lab2_list.c SortedList.c -o lab2_list
 
-tests:
+tests: build
 	chmod u+x generate_data.sh
 	./generate_data.sh
+
+graphs: tests
+	gnuplot lab2_add.gp
+	gnuplot lab2_list.gp
+
+dist: graphs
+	tar -czf lab2a-404782322.tar.gz Makefile README lab2_add.c lab2_list.c SortedList.c SortedList.h generate_data.sh *.png *.csv *.gp
+
+clean:
+	rm -f lab2_add lab2_list lab2a-404782322.tar.gz
