--- a/P3A/Makefile
+++ b/P3A/Makefile
@@ -11,7 +11,7 @@ default:
 	$(CC) -o lab3a $(FLAGS) lab3a.c
 
 dist:
-	tar -czf lab3a-404782322.tar.gz Makefile README lab3a.c
+	tar -czf lab3a-404782322.tar.gz Makefile README lab3a.c ext2_fs.h
 
 clean:
 	rm -f lab2_list lab3a-404782322.tar.gz
