--- a/P3A/Makefile
+++ b/P3A/Makefile
@@ -14,4 +14,4 @@ dist:
 	tar -czf lab3a-404782322.tar.gz Makefile README lab3a.c ext2_fs.h
 
 clean:
-	rm -f lab2_list lab3a-404782322.tar.gz
+	rm -f lab3a lab3a-404782322.tar.gz
